namespaces/live.cloud-platform.service.justice.gov.uk/laa-court-data-api-production/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-court-data-api-production
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-assess-a-claim"
    cloud-platform.justice.gov.uk/application: "laa-court-data-api"
    cloud-platform.justice.gov.uk/owner: "LAA Assess a Claim: assessaclaim@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-court-data-api"
    cloud-platform.justice.gov.uk/team-name: "laa-assess-a-claim"
    cloud-platform.justice.gov.uk/review-after: ""
